@@ -1,5 +1,6 @@
 The following changes have been made between John 1.7.8 and 1.7.9:
 
+* Added support for cracking 10-character DES-based tripcodes.
 * Two pre-defined external mode variables have been added: "abort" and
 "status", which let an external mode request the current cracking session to be
 aborted or the status line to be displayed, respectively.
@@ -255,4 +256,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.60 2011/10/09 01:43:49 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.61 2011/10/16 21:26:37 solar Exp $
